<resources>
    <string name="app_name">Sqlite_Phones</string>
    <string name="contact_name">Name</string>
    <string name="phone_number">Phone</string>
    <string name="contact_category">Category</string>
    <string name="email">Email</string>
    <string name="address">address</string>

    <string name="save_contact">Save Contact</string>
    <string name="list_contact">Record List</string>
    <string name="update_contact">Update</string>
    <string name="delete_contact">Delete</string>
    <string name="go_to_address">Go to address</string>

    <string name="msg_no_contacts_found">No contacts found</string>
    <string name="msg_input_all_data">Please, input all data</string>
    <string name="msg_save_success">Contact saved successfully</string>
    <string name="msg_update_success">Contact updated successfully</string>
    <string name="msg_delete_success">Contact deleted</string>




</resources>
