<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:layout_gravity="center"
        android:background="@drawable/shadow"
        android:paddingBottom="20dp">
        <RelativeLayout
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/gradient"
            android:padding="10dp"
            android:layout_centerHorizontal="true">
        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:src="@drawable/contact_person"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp">
                <TableRow
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_name"
                        android:textColor="@color/headings"
                        android:textStyle="bold"
                        android:layout_marginRight="60dp"
                        android:textSize="15sp" />
                    <TextView
                        android:id="@+id/txtName"
                        android:text="@string/contact_name"
                        android:textSize="15sp"
                        android:textColor="@color/headings"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"/>
                </TableRow>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/grey" />
                <TableRow
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:text="@string/phone_number"
                        android:textColor="@color/headings"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/txtPhone"
                        android:text="@string/phone_number"
                        android:textSize="15sp"
                        android:textColor="@color/headings"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"/>
                </TableRow>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/grey" />
                <TableRow
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:text="@string/contact_category"
                        android:textColor="@color/headings"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/txtCategory"
                        android:text="@string/contact_category"
                        android:textSize="15sp"
                        android:textColor="@color/headings"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"/>
                </TableRow>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/grey" />
                <TableRow
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:text="@string/email"
                        android:textColor="@color/headings"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/txtEmail"
                        android:text="@string/email"
                        android:textSize="15sp"
                        android:textColor="@color/headings"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"/>
                </TableRow>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/grey" />
                <TableRow
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:text="@string/address"
                        android:textColor="@color/headings"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/txtAddress"
                        android:text="@string/address"
                        android:textSize="15sp"
                        android:textColor="@color/headings"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"/>
                </TableRow>
            </TableLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>