<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">
    <RelativeLayout
        android:id="@+id/wrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:layout_marginBottom="30dp"
            android:padding="30dp"
            android:layout_centerHorizontal="true">
            <ImageView
                android:layout_alignParentTop="true"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@drawable/contact_person"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@id/imageView"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="Name"
                    android:background="@color/white"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/editPhone"
                    android:layout_below="@+id/tvPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:background="@color/white"
                    android:hint="+359 000 000 000"
                    android:inputType="phone"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:maxLength="20"/>

                <ImageButton
                    android:id="@+id/btnCall"
                    android:layout_marginBottom="20dp"
                    android:layout_alignParentRight="true"
                    android:minWidth="120dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/go_to_address"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:background="@drawable/phone_call"
                    android:layout_width="30dp"
                    android:layout_height="35dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/editPhone"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_category"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/editCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:background="@color/white"
                    android:hint="@string/contact_category"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:background="@color/white"
                    android:hint="example@domain.com"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/editAddress"
                    android:layout_below="@+id/tvAddress"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:background="@color/white"
                    android:hint="@string/address"
                    android:textColor="#000000"
                    android:textSize="18sp" />
                <Button
                    android:id="@+id/btnMap"
                    android:layout_marginBottom="20dp"
                    android:layout_alignParentRight="true"
                    android:minWidth="120dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/go_to_address"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:background="@drawable/gradient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/editAddress"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:layout_centerHorizontal="true">
                <Button
                    android:id="@+id/btnUpdate"
                    android:minWidth="160dp"
                    android:text="@string/update_contact"
                    android:background="@drawable/gradient"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btnDelete"
                    android:layout_toRightOf="@id/btnUpdate"
                    android:layout_marginLeft="20dp"
                    android:minWidth="160dp"
                    android:text="@string/delete_contact"
                    android:textColor="@color/white"
                    android:background="@drawable/gradient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

</ScrollView>